tests/snapshots/e2e_test__case_01_diff.snap
---
source: tests/e2e_test.rs
expression: "fixture.stager.diff(&[\"flake.nix\".to_string()]).unwrap()"
---
flake.nix:
  +137:	      debug = true;
