tests/snapshots/e2e_test__case_02_diff.snap
---
source: tests/e2e_test.rs
expression: "fixture.stager.diff(&[\"flake.nix\".to_string()]).unwrap()"
---
flake.nix:
  +39:	
  +40:	    stylix = {
  +41:	      url = "github:nix-community/stylix";
  +42:	      inputs.nixpkgs.follows = "nixpkgs";
  +43:	    };
