tests/snapshots/e2e_test__case_02_initial_diff.snap
---
source: tests/e2e_test.rs
expression: diff
---
diff --git a/flake.nix b/flake.nix
index 462392e..0b97d01 100644
--- a/flake.nix
+++ b/flake.nix
@@ -38,0 +39,5 @@ line 38
+
+    stylix = {
+      url = "github:nix-community/stylix";
+      inputs.nixpkgs.follows = "nixpkgs";
+    };
