tests/snapshots/e2e_test__case_03_initial_diff.snap
---
source: tests/e2e_test.rs
expression: diff
---
diff --git a/default.nix b/default.nix
index a9d0261..8234e95 100644
--- a/default.nix
+++ b/default.nix
@@ -39,0 +40,3 @@
+        # Allow Stylix to override terminal font
+        "terminal.integrated.fontFamily" = lib.mkDefault "monospace";
+        "direnv.restart.automatic" = true;
