tests/snapshots/e2e_test__case_03_remaining.snap
---
source: tests/e2e_test.rs
expression: remaining
---
diff --git a/default.nix b/default.nix
index dbd5dee..8234e95 100644
--- a/default.nix
+++ b/default.nix
@@ -41,0 +42 @@
+        "direnv.restart.automatic" = true;
