tests/snapshots/e2e_test__case_04_diff.snap
---
source: tests/e2e_test.rs
expression: "fixture.stager.diff(&[\"zsh.nix\".to_string()]).unwrap()"
---
zsh.nix:
  -15:	      enableAutosuggestions = true;
